singletons-base/tests/compile-and-dump/Singletons/BadBoundedDeriving.golden

Singletons/BadBoundedDeriving.hs:0:0: error:
    Can't derive Bounded instance for Foo_0 a_1.
  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
